--- a/wiki/de/TechDraw_2PointCosmeticLine.html
+++ b/wiki/de/TechDraw_2PointCosmeticLine.html
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr;Hilfslinie durch 2 Punkte hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Hilfslinie durch 2 Punkte
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -147,15 +145,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204201
+Cached time: 20260111204255
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.214 seconds
-Preprocessor visited node count: 366/1000000
-Post&#8208;expand include size: 29306/2097152 bytes
-Template argument size: 11480/2097152 bytes
+CPU time usage: 0.102 seconds
+Real time usage: 0.173 seconds
+Preprocessor visited node count: 365/1000000
+Post&#8208;expand include size: 29284/2097152 bytes
+Template argument size: 11458/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -163,19 +161,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.188      1 -total
- 18.43%    7.960      1 Template:TechDraw_Tools_navi/de
- 16.39%    7.080      1 Template:Version/de
- 11.35%    4.903      1 Template:GuiCommand/de
- 11.05%    4.774      2 Template:Docnav/de
- 10.34%    4.464      2 Template:Navigation_menu_2
-  8.82%    3.810      1 Template:Caption
-  7.90%    3.413      1 Template:Userdocnavi/de
-  6.37%    2.751      2 Template:Incode
-  6.01%    2.597      1 Template:KEY
+100.00%   29.820      1 -total
+ 32.52%    9.696      1 Template:TechDraw_Tools_navi/de
+ 23.79%    7.093      2 Template:Navigation_menu_2
+ 12.44%    3.711      1 Template:Userdocnavi/de
+  8.84%    2.637      2 Template:Docnav/de
+  7.58%    2.259      1 Template:GuiCommand/de
+  7.19%    2.145      1 Template:Version/de
+  6.60%    1.967      1 Template:Caption
+  5.91%    1.763      2 Template:Incode
+  5.19%    1.549      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204201 and revision id 1736111. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204255 and revision id 1736119. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
