--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -411,10 +411,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a pot&eacute; klikn&#283;te lev&yacute;m tla&#269;&iacute;tkem my&scaron;i na objekt, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> instead to select multiple objects.
+<p>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>, abyste vybrali v&iacute;ce objekt&#367;.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Use the mouse wheel to zoom in and out.
@@ -962,15 +960,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204319
+Cached time: 20260111204348
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.271 seconds
-Real time usage: 0.397 seconds
-Preprocessor visited node count: 1522/1000000
-Post&#8208;expand include size: 73429/2097152 bytes
-Template argument size: 28364/2097152 bytes
+CPU time usage: 0.277 seconds
+Real time usage: 0.479 seconds
+Preprocessor visited node count: 1521/1000000
+Post&#8208;expand include size: 73382/2097152 bytes
+Template argument size: 28317/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -978,19 +976,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  107.530      1 -total
- 21.04%   22.624      1 Template:Userdocnavi/cs
- 14.99%   16.119      1 Template:Navigation_menu_2
-  9.21%    9.902      1 Template:OpenSCAD_Navigation
-  9.00%    9.681      1 Template:OpenCascade_Navigation
-  7.35%    7.903      8 Template:ASCII
-  7.25%    7.792      1 Template:SolidWorks_Navigation
-  4.43%    4.765      1 Template:OpenInventor_Navigation
-  4.34%    4.663      1 Template:Revit_Navigation
-  4.16%    4.473      1 Template:SiemensNX_Navigation
+100.00%  156.768      1 -total
+  9.68%   15.174      1 Template:Userdocnavi/cs
+  9.65%   15.129      1 Template:OpenCascade_Navigation
+  7.49%   11.743      1 Template:OpenSCAD_Navigation
+  7.10%   11.135      8 Template:ASCII
+  7.09%   11.111      1 Template:Gesture_Navigation
+  6.74%   10.561      1 Template:TinkerCAD_Navigation
+  6.05%    9.487      1 Template:MayaGesture_Navigation
+  5.93%    9.290      1 Template:SolidWorks_Navigation
+  5.76%    9.027      1 Template:Touchpad_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204318 and revision id 1736121. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204347 and revision id 1736125. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
