--- a/wiki/de/TechDraw_2PointCosmeticLine.html
+++ b/wiki/de/TechDraw_2PointCosmeticLine.html
@@ -62,17 +62,15 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Zwei Punkte in einer TechDraw-Ansicht oder zweiPunkte in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> ausw&auml;hlen.</li>
 <li>Wenn die Punkte in der 3D-Ansicht ausgew&auml;hlt wurden: Die korrekte TechDraw-Ansicht zur Auswahl hinzuf&uuml;gen, indem sie in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> ausgew&auml;hlt wird.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hilfslinie durch 2 Punkte hinzuf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfslinie durch 2 Punkte hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
-<li>Ein Aufgaben-Bereich wird ge&ouml;ffnet.</li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hilfslinie durch 2 Punkte</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfslinie durch 2 Punkte</b> ausw&auml;hlen.</li></ul></li>
+<li>Das Aufgaben-Fenster wird ge&ouml;ffnet.</li>
 <li>Wahlweise die Koordinaten der Punkte anpassen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li>
 <li>Eine Hilfslinie, die die beiden Punkte verbindet, wird hinzugef&uuml;gt. Im Falle von 3D-Punkten verbindet die Linie die Projektionen der Punkte.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
@@ -145,15 +143,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204255
+Cached time: 20260111204412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 365/1000000
-Post&#8208;expand include size: 29284/2097152 bytes
-Template argument size: 11458/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.316 seconds
+Preprocessor visited node count: 364/1000000
+Post&#8208;expand include size: 29260/2097152 bytes
+Template argument size: 11434/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -161,19 +159,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.820      1 -total
- 32.52%    9.696      1 Template:TechDraw_Tools_navi/de
- 23.79%    7.093      2 Template:Navigation_menu_2
- 12.44%    3.711      1 Template:Userdocnavi/de
-  8.84%    2.637      2 Template:Docnav/de
-  7.58%    2.259      1 Template:GuiCommand/de
-  7.19%    2.145      1 Template:Version/de
-  6.60%    1.967      1 Template:Caption
-  5.91%    1.763      2 Template:Incode
-  5.19%    1.549      4 Template:Button
+100.00%   82.269      1 -total
+ 38.16%   31.390      1 Template:TechDraw_Tools_navi/de
+ 22.15%   18.221      2 Template:Navigation_menu_2
+ 16.62%   13.674      2 Template:Incode
+  7.75%    6.373      2 Template:Docnav/de
+  7.06%    5.812      2 Template:MenuCommand
+  6.05%    4.980      1 Template:GuiCommand/de
+  5.19%    4.269      1 Template:KEY
+  5.17%    4.254      1 Template:Userdocnavi/de
+  4.83%    3.972      1 Template:Version/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204255 and revision id 1736119. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204411 and revision id 1736127. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
