--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -415,10 +415,8 @@
 </p>
 </td>
 <td colspan="2">Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat zobrazen&iacute;.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, hold the middle mouse button, then press and hold the left mouse button, then move the pointer.
+<p>Alternativn&#283; podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Clicking the middle mouse button re-centers the view on the location of the pointer.
 </p>
@@ -958,15 +956,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204414
+Cached time: 20260111204443
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.299 seconds
-Real time usage: 1.052 seconds
-Preprocessor visited node count: 1520/1000000
-Post&#8208;expand include size: 73355/2097152 bytes
-Template argument size: 28290/2097152 bytes
+CPU time usage: 0.321 seconds
+Real time usage: 0.514 seconds
+Preprocessor visited node count: 1519/1000000
+Post&#8208;expand include size: 73316/2097152 bytes
+Template argument size: 28251/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -974,19 +972,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  230.230      1 -total
- 10.47%   24.100      2 Template:Docnav
-  9.78%   22.510      1 Template:OpenInventor_Navigation
-  8.70%   20.029      8 Template:ASCII
-  8.37%   19.260      1 Template:Userdocnavi/cs
-  6.26%   14.404      2 Template:Version
-  6.21%   14.302      1 Template:Gesture_Navigation
-  6.07%   13.986      1 Template:OpenSCAD_Navigation
-  5.03%   11.586      1 Template:Revit_Navigation
-  4.69%   10.795      1 Template:MayaGesture_Navigation
+100.00%   77.043      1 -total
+ 15.46%   11.908      8 Template:ASCII
+  8.77%    6.757      1 Template:OpenSCAD_Navigation
+  6.41%    4.940      1 Template:Userdocnavi/cs
+  6.33%    4.875      1 Template:OpenInventor_Navigation
+  6.10%    4.702      1 Template:OpenCascade_Navigation
+  6.03%    4.648      1 Template:CAD_Navigation
+  5.60%    4.318      1 Template:SolidWorks_Navigation
+  5.47%    4.218      1 Template:Gesture_Navigation
+  5.25%    4.043     69 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204412 and revision id 1736129. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204442 and revision id 1736131. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
