--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -418,10 +418,8 @@
 <p>Alternativn&#283; podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </p><p>Kliknut&iacute;m na prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i se zobrazen&iacute; znovu vycentruje na pozici ukazatele.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the left mouse button, then move the pointer.
-
+</td>
+<td>Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold the middle mouse button, then move the pointer.
@@ -953,15 +951,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204512
+Cached time: 20260111204535
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.303 seconds
-Real time usage: 0.447 seconds
-Preprocessor visited node count: 1518/1000000
-Post&#8208;expand include size: 73271/2097152 bytes
-Template argument size: 28206/2097152 bytes
+CPU time usage: 0.296 seconds
+Real time usage: 0.850 seconds
+Preprocessor visited node count: 1517/1000000
+Post&#8208;expand include size: 73218/2097152 bytes
+Template argument size: 28153/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -969,19 +967,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  101.851      1 -total
- 14.56%   14.833      8 Template:ASCII
- 12.34%   12.565      1 Template:Userdocnavi/cs
-  7.87%    8.019      1 Template:OpenSCAD_Navigation
-  6.79%    6.911      1 Template:OpenInventor_Navigation
-  5.28%    5.375      1 Template:OpenCascade_Navigation
-  4.64%    4.730     69 Template:KEY
-  4.57%    4.654      1 Template:SolidWorks_Navigation
-  4.35%    4.434      1 Template:Navigation_menu_2
-  4.02%    4.092      1 Template:Touchpad_Navigation
+100.00%  122.497      1 -total
+ 18.02%   22.078      1 Template:Userdocnavi/cs
+ 10.31%   12.627      1 Template:Touchpad_Navigation/cs
+  9.28%   11.363      1 Template:Blender_Navigation
+  7.20%    8.819      1 Template:Touchpad_Navigation
+  6.71%    8.224      8 Template:ASCII
+  6.59%    8.077     69 Template:KEY
+  6.53%    8.000      1 Template:CAD_Navigation
+  6.38%    7.821      1 Template:Navigation_menu_2
+  6.11%    7.483      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204511 and revision id 1736133. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204534 and revision id 1736137. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
