--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -420,11 +420,9 @@
 </p>
 </td>
 <td>Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the middle mouse button, then move the pointer.
+</td>
+<td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </td></tr></tbody></table>
-
 <p><span id="OpenSCAD_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="OpenSCAD_navigace">OpenSCAD navigace</span></h3>
@@ -951,15 +949,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204535
+Cached time: 20260111204603
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.296 seconds
-Real time usage: 0.850 seconds
-Preprocessor visited node count: 1517/1000000
-Post&#8208;expand include size: 73218/2097152 bytes
-Template argument size: 28153/2097152 bytes
+CPU time usage: 0.297 seconds
+Real time usage: 0.547 seconds
+Preprocessor visited node count: 1516/1000000
+Post&#8208;expand include size: 73177/2097152 bytes
+Template argument size: 28112/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -967,19 +965,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  122.497      1 -total
- 18.02%   22.078      1 Template:Userdocnavi/cs
- 10.31%   12.627      1 Template:Touchpad_Navigation/cs
-  9.28%   11.363      1 Template:Blender_Navigation
-  7.20%    8.819      1 Template:Touchpad_Navigation
-  6.71%    8.224      8 Template:ASCII
-  6.59%    8.077     69 Template:KEY
-  6.53%    8.000      1 Template:CAD_Navigation
-  6.38%    7.821      1 Template:Navigation_menu_2
-  6.11%    7.483      2 Template:Docnav
+100.00%   92.375      1 -total
+ 12.98%   11.990      1 Template:Userdocnavi/cs
+ 11.91%   11.000      1 Template:TinkerCAD_Navigation
+  8.86%    8.181      8 Template:ASCII
+  8.23%    7.601      1 Template:Gesture_Navigation
+  7.72%    7.133      1 Template:SolidWorks_Navigation
+  5.97%    5.512      1 Template:Navigation_menu_2
+  5.68%    5.251      1 Template:SiemensNX_Navigation
+  4.78%    4.417      1 Template:OpenSCAD_Navigation
+  4.05%    3.737      1 Template:Touchpad_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204534 and revision id 1736137. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204603 and revision id 1736139. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
