--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -425,7 +425,7 @@
 </td></tr></tbody></table>
 <p><span id="OpenSCAD_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="OpenSCAD_navigace">OpenSCAD navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_OpenSCAD">Navigace OpenSCAD</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The OpenSCAD navigation style was modeled after <a rel="nofollow" class="external text" href="https://openscad.org/">OpenSCAD</a>.
 </p>
@@ -949,12 +949,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204603
+Cached time: 20260111204616
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.297 seconds
-Real time usage: 0.547 seconds
+CPU time usage: 0.294 seconds
+Real time usage: 0.431 seconds
 Preprocessor visited node count: 1516/1000000
 Post&#8208;expand include size: 73177/2097152 bytes
 Template argument size: 28112/2097152 bytes
@@ -965,19 +965,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   92.375      1 -total
- 12.98%   11.990      1 Template:Userdocnavi/cs
- 11.91%   11.000      1 Template:TinkerCAD_Navigation
-  8.86%    8.181      8 Template:ASCII
-  8.23%    7.601      1 Template:Gesture_Navigation
-  7.72%    7.133      1 Template:SolidWorks_Navigation
-  5.97%    5.512      1 Template:Navigation_menu_2
-  5.68%    5.251      1 Template:SiemensNX_Navigation
-  4.78%    4.417      1 Template:OpenSCAD_Navigation
-  4.05%    3.737      1 Template:Touchpad_Navigation/cs
+100.00%   64.639      1 -total
+ 16.08%   10.393      8 Template:ASCII
+ 12.30%    7.951      1 Template:Userdocnavi/cs
+  6.22%    4.021      1 Template:OpenSCAD_Navigation
+  5.36%    3.464      1 Template:Navigation_menu_2
+  5.12%    3.312     69 Template:KEY
+  4.87%    3.148      1 Template:Blender_Navigation
+  4.31%    2.786      1 Template:Gesture_Navigation
+  4.29%    2.772      1 Template:CAD_Navigation
+  4.20%    2.716      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204603 and revision id 1736139. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204615 and revision id 1736141. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
