--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -426,10 +426,8 @@
 <p><span id="OpenSCAD_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_OpenSCAD">Navigace OpenSCAD</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The OpenSCAD navigation style was modeled after <a rel="nofollow" class="external text" href="https://openscad.org/">OpenSCAD</a>.
+<p>Styl navigace OpenSCAD byl vytvo&#345;en podle <a rel="nofollow" class="external text" href="https://openscad.org/">OpenSCAD</a>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
@@ -949,13 +947,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204616
+Cached time: 20260111204651
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.294 seconds
-Real time usage: 0.431 seconds
-Preprocessor visited node count: 1516/1000000
+CPU time usage: 0.289 seconds
+Real time usage: 0.492 seconds
+Preprocessor visited node count: 1515/1000000
 Post&#8208;expand include size: 73177/2097152 bytes
 Template argument size: 28112/2097152 bytes
 Highest expansion depth: 7/100
@@ -965,19 +963,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.639      1 -total
- 16.08%   10.393      8 Template:ASCII
- 12.30%    7.951      1 Template:Userdocnavi/cs
-  6.22%    4.021      1 Template:OpenSCAD_Navigation
-  5.36%    3.464      1 Template:Navigation_menu_2
-  5.12%    3.312     69 Template:KEY
-  4.87%    3.148      1 Template:Blender_Navigation
-  4.31%    2.786      1 Template:Gesture_Navigation
-  4.29%    2.772      1 Template:CAD_Navigation
-  4.20%    2.716      1 Template:SolidWorks_Navigation
+100.00%   93.060      1 -total
+ 19.01%   17.693      1 Template:SolidWorks_Navigation
+ 11.36%   10.573      8 Template:ASCII
+  9.00%    8.380      1 Template:Userdocnavi/cs
+  6.80%    6.325      1 Template:SiemensNX_Navigation
+  6.03%    5.616      1 Template:Touchpad_Navigation/cs
+  4.97%    4.623      1 Template:OpenSCAD_Navigation
+  4.72%    4.395     69 Template:KEY
+  3.87%    3.605      1 Template:TinkerCAD_Navigation
+  3.85%    3.586      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204615 and revision id 1736141. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204650 and revision id 1736143. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
