--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -428,19 +428,16 @@
 <h3><span class="mw-headline" id="Navigace_OpenSCAD">Navigace OpenSCAD</span></h3>
 <p>Styl navigace OpenSCAD byl vytvo&#345;en podle <a rel="nofollow" class="external text" href="https://openscad.org/">OpenSCAD</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Select
+<th style="width:20%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th colspan="3" style="width:36%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th colspan="2" style="width:24%; background: #ededff; padding:2px 2px;">Rotate view
+<th colspan="2" style="width:24%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Pan
-
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+<th style="width:20%; background: #ededff; padding:2px 2px;">Posun pohledu
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -458,7 +455,6 @@
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB_hold.svg&amp;filetimestamp=20181210194240&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB_hold.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
 </div></td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
@@ -498,7 +494,7 @@
 </div></td>
 <td>Hold the right mouse button, then move the pointer.
 </td></tr></tbody></table>
-</div>
+
 <p><span id="Revit_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Revit_navigace">Revit navigace</span></h3>
@@ -947,15 +943,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204651
+Cached time: 20260111204742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.289 seconds
-Real time usage: 0.492 seconds
-Preprocessor visited node count: 1515/1000000
-Post&#8208;expand include size: 73177/2097152 bytes
-Template argument size: 28112/2097152 bytes
+CPU time usage: 0.268 seconds
+Real time usage: 0.453 seconds
+Preprocessor visited node count: 1513/1000000
+Post&#8208;expand include size: 73127/2097152 bytes
+Template argument size: 28062/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -963,19 +959,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   93.060      1 -total
- 19.01%   17.693      1 Template:SolidWorks_Navigation
- 11.36%   10.573      8 Template:ASCII
-  9.00%    8.380      1 Template:Userdocnavi/cs
-  6.80%    6.325      1 Template:SiemensNX_Navigation
-  6.03%    5.616      1 Template:Touchpad_Navigation/cs
-  4.97%    4.623      1 Template:OpenSCAD_Navigation
-  4.72%    4.395     69 Template:KEY
-  3.87%    3.605      1 Template:TinkerCAD_Navigation
-  3.85%    3.586      1 Template:Navigation_menu_2
+100.00%  131.906      1 -total
+ 10.83%   14.288      8 Template:ASCII
+  9.11%   12.013      1 Template:OpenSCAD_Navigation
+  7.65%   10.097      1 Template:Touchpad_Navigation/cs
+  7.09%    9.357      1 Template:CAD_Navigation
+  6.23%    8.221      1 Template:OpenInventor_Navigation
+  5.28%    6.965      1 Template:SolidWorks_Navigation
+  5.13%    6.771      1 Template:MayaGesture_Navigation
+  4.90%    6.461      1 Template:OpenCascade_Navigation
+  4.65%    6.138      1 Template:Blender_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204650 and revision id 1736143. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204741 and revision id 1736147. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
