--- a/wiki/de/TechDraw_2PointCosmeticLine.html
+++ b/wiki/de/TechDraw_2PointCosmeticLine.html
@@ -141,12 +141,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204533
+Cached time: 20260111204740
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.199 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.164 seconds
 Preprocessor visited node count: 363/1000000
 Post&#8208;expand include size: 29236/2097152 bytes
 Template argument size: 11410/2097152 bytes
@@ -157,19 +157,19 @@ Unstrip post&#8208;expand size: 1779/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.483      1 -total
- 21.12%    8.550      1 Template:TechDraw_Tools_navi/de
- 12.19%    4.935      1 Template:Userdocnavi/de
- 12.10%    4.898      2 Template:Docnav/de
- 12.04%    4.876      1 Template:GuiCommand/de
- 11.62%    4.706      2 Template:Navigation_menu_2
-  9.30%    3.765      1 Template:Caption
-  7.64%    3.092      1 Template:Version/de
-  6.82%    2.762      2 Template:Incode
-  6.22%    2.516      1 Template:KEY
+100.00%   28.941      1 -total
+ 20.96%    6.067      1 Template:TechDraw_Tools_navi/de
+ 14.07%    4.072      1 Template:Caption
+ 13.53%    3.917      1 Template:Userdocnavi/de
+ 13.41%    3.881      2 Template:Navigation_menu_2
+ 10.69%    3.095      1 Template:GuiCommand/de
+  8.22%    2.380      2 Template:Docnav/de
+  7.48%    2.166      1 Template:Version/de
+  5.98%    1.731      4 Template:Button
+  5.76%    1.666      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204533 and revision id 1736135. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204740 and revision id 1736135. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
